--- a/Builds/VisualStudio2022/manbonizer_SharedCode.vcxproj
+++ b/Builds/VisualStudio2022/manbonizer_SharedCode.vcxproj
@@ -2414,6 +2414,7 @@
     <ClInclude Include="..\..\Source\dsp\formanter.h"/>
     <ClInclude Include="..\..\Source\dsp\manbo.h"/>
     <ClInclude Include="..\..\Source\ui\LM_slider.h"/>
+    <ClInclude Include="..\..\Source\ui\specturmUI.h"/>
     <ClInclude Include="..\..\Source\PluginProcessor.h"/>
     <ClInclude Include="..\..\Source\PluginEditor.h"/>
     <ClInclude Include="C:\JUCE\modules\juce_audio_basics\audio_play_head\juce_AudioPlayHead.h"/>
